IaC/xpipe-dev/xpipe-vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpipe-vault
  namespace: xpipe-dev
  labels:
    app: xpipe-vault
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-body-size: "8g"
  #  nginx.org/client-max-body-size: "8g"
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: dev-vault-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: xpipe-vault
              port:
                number: 8200
  tls:
  - hosts:
    - dev-vault-xpipe.sindria.org
    secretName: tls-sindriaorg
